defmt/tests/ui/derive-invalid-attr-arg-item.stderr
error: unknown defmt attribute `FooBar`
 --> tests/ui/derive-invalid-attr-arg-item.rs:2:9
  |
2 | #[defmt(FooBar)]
  |         ^^^^^^
