defmt/tests/ui/derive-invalid-attr-arg-item.rs
#[derive(defmt::Format)]
#[defmt(FooBar)]
struct S {
    f: bool,
}

fn main() {}
